--- a/main.html
+++ b/main.html
@@ -10,7 +10,9 @@
 	<!-- the entire body must be written by student -->
 	<header>
 		<div>
-			<marquee><h1>Welcome to AccioJobs!</h1><marquee>
+			<marquee>
+				<h1>Welcome to AccioJobs!<h1>
+			</marquee>
 		</div>
 					
 	</header>
